# GDR_Game

./: CMakeLists.txt  Player.cpp  Player.h  README.md  config.cpp  main.cpp
